Update PacketBrokerClientTest